--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,8 @@
   <div class="sidebar-item">
     <div class="sidebar-personal-info">
       <div class="sidebar-personal-info-section">
-        <a href="https://gravatar.com/{{ site.author.gravatar }}">
-          <img src="https://www.gravatar.com/avatar/{{ site.author.gravatar }}?s=350" title="View on Gravatar" alt="View on Gravatar" />
+        <a href="https://gravatar.com/8dc8eb5fb70460f5da8e678a7cb47b3f">
+          <img src="https://www.gravatar.com/avatar/8dc8eb5fb70460f5da8e678a7cb47b3f?s=350" title="View on Gravatar" alt="View on Gravatar" />
         </a>
       </div>
       <div class="sidebar-personal-info-section">
@@ -72,6 +72,9 @@
   <div class="sidebar-item">
     <p>
     &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. This work is liscensed under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.
+    </p>
+    <p>
+      This Blog is forked from <a href="http://ratsgo.github.io">ratsgo</a>
     </p>
   </div>
 
