--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
   <style>blockquote {font-size: 1em; line-height: 1.4}</style>
   </head>
-  <body>
+  <body class="theme-base-0d">
 
     {% include sidebar.html %}
 
