profile img mod

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,8 @@
   <div class="sidebar-item">
     <div class="sidebar-personal-info">
       <div class="sidebar-personal-info-section">
-        <a href="https://gravatar.com/8dc8eb5fb70460f5da8e678a7cb47b3f">
-          <img src="https://www.gravatar.com/avatar/8dc8eb5fb70460f5da8e678a7cb47b3f?s=350" title="View on Gravatar" alt="View on Gravatar" />
+        <a href="https://gravatar.com/0ef54e4814124fe286e738b0f774522b">
+          <img src="https://www.gravatar.com/avatar/0ef54e4814124fe286e738b0f774522b?s=350" title="View on Gravatar" alt="View on Gravatar" />
         </a>
       </div>
       <div class="sidebar-personal-info-section">
@@ -70,11 +70,12 @@
   </nav>
 
   <div class="sidebar-item">
+    <br>
     <p>
     &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. This work is liscensed under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.
     </p>
     <p>
-      This Blog is forked from <a href="http://ratsgo.github.io">ratsgo</a>
+      This blog is forked from <a href="http://ratsgo.github.io">ratsgo's blog</a>
     </p>
   </div>
 
