--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
               <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
             </a>
             <small>{{ site.tagline }}</small>
-            <img src="http://yngie-c.github.io/public/search.png" width="20" height="20" style="position:absolute; top:1.3rem; right:1.5rem" data-toggle="modal" data-target="#myModal">
+            <img src="https://yngie-c.github.io/public/search.png" width="20" height="20" style="position:absolute; top:1.3rem; right:1.5rem" data-toggle="modal" data-target="#myModal">
           </h3>
         </div>
       </div>
