--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -67,7 +67,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #0f4c81;
   text-decoration: none;
 }
 a strong {
@@ -376,7 +376,7 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: #268bd2;
+  color: #0f4c81;
   text-decoration: none;
 }
 .related-posts li a:hover small {
