--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
   {% include head.html %}
   <style>blockquote {font-size: 1em; line-height: 1.4}</style>
-  {% if page.use_math %}
+  {% if page.mathjax %}
     {% include mathjax_support.html %}
   {% endif %}
   </head>
